# AppImage-Manager

./: .commit_msg  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  GEMINI.md  PKGBUILD  README.md  cli.py  core.py  gui.py  install.sh
.github/workflows/: build.yml
LICENSES/: GPL-2.0-or-later.txt
data/: CMakeLists.txt  appimagemanager.desktop  appimagemanager.metainfo.xml  appimagemanager.notifyrc  io.github.appimagemanager.Daemon.service.in  io.github.strandzen.AppImageManager.desktop  org.kde.appimagemanager.daemon.desktop
data/ci/: test.sh
data/servicemenus/: appimagemanager.desktop  org.kde.appimagemanager.desktop
markdown/plans/: Analyzing_AppManager_Update_Mechanisms_plan.md  Analyzing_AppManager_Update_Mechanisms_task.md  am_integration_proposal.md  analyze-this-project-from-ancient-whale.md  analyze-this-project-from-logical-rose.md  appimage-packaging.md  aur_submission_plan.md  between-1-or-2-linear-treasure.md  control-that-all-code-sharded-badger.md  dashboard_layout_plan.md  dashboard_layout_walkthrough.md  dashboard_refinements_plan.md  dashboard_refinements_task.md  dashboard_refinements_walkthrough.md  discover_freeze_alignment_icons.md  drag_and_drop_sources_plan.md  gemini-tried-to-implement-lexical-pike.md  gui_improvements_feedjson_plan.md  https-develop-kde-org-hig-read-this-and-warm-bunny.md  i-need-a-deep-robust-nest.md  in-norwegian-but-reply-cheerful-star.md  kconfigxt_migration.md  kde_integration_changes_plan.md  kde_integration_changes_walkthrough.md  kde_plasma_review_report.md  kink_ironing_comprehensive.md  modular_store_sources.md  mossy-noodling-sketch.md  onboarding_plan.md  present-me-a-plan-squishy-flask.md  present-me-with-a-glowing-ripple.md  rate-this-project-as-foamy-pnueli.md  refining_dashboard_ui_separator.md  settings_dialog_ux_redesign.md  task.md  the-select-button-in-flickering-coral.md  v1.5.0_bugfix_and_appstream_plan.md  v2_features_implementation.md  what-other-info-about-enchanted-sutherland.md  when-updating-how-does-cheeky-pearl.md
markdown/plans/00b8385e-e54a-4e91-acc0-081660f44f47/: implementation_plan.md  task.md  walkthrough.md
markdown/plans/00e61e8c-5711-48ec-86fc-c1c776beb1c3/: implementation_plan.md  task.md  walkthrough.md
markdown/plans/05b71f2e-3aeb-4c0c-9ad9-1e5daefe46fa/: implementation_plan.md  task.md  walkthrough.md
markdown/plans/07d2c9ef-49e5-4e34-b920-571d54e96aef/: implementation_plan.md  task.md  walkthrough.md
markdown/plans/0c74b4d9-add5-43e8-b89e-64a4a9b21e26/: implementation_plan.md  task.md  walkthrough.md
markdown/plans/0d7e5d50-3f1a-49dc-94d6-d928fe9e4008/: implementation_plan.md  task.md  walkthrough.md
markdown/plans/13179a21-21f1-4546-8693-500e8883d7d6/: implementation_plan.md  task.md  walkthrough.md
markdown/plans/136ae2a7-2789-4b87-a08c-91ae8b14c4f1/: implementation_plan.md  task.md  walkthrough.md
markdown/plans/13c4fbb8-be40-4517-b42d-91416231b01f/: implementation_plan.md  task.md  walkthrough.md
markdown/plans/14f3b092-f00a-498a-8df2-de924867ca5c/: task.md  walkthrough.md
markdown/plans/176cfeba-c271-4455-9b40-d1f5f126b805/: implementation_plan.md  task.md  walkthrough.md
markdown/plans/1a6de2f5-91ee-4bf5-8336-10a2b82d3f13/: implementation_plan.md  task.md  walkthrough.md
markdown/plans/1d40d7b5-13df-4854-83a1-9c3eaf57e976/: implementation_plan.md  task.md  walkthrough.md
markdown/plans/30e214ce-69d4-4a19-9ca5-f84ee6752237/: implementation_plan.md  task.md
markdown/plans/3bbc68c5-e9f7-4d19-a7d2-a4a17c3e40f4/: task.md  walkthrough.md
markdown/plans/4718f1ed-eca1-4838-8a99-a71074e89aae/: implementation_plan.md  task.md  walkthrough.md
markdown/plans/4a68be4b-f0d8-490a-8b5e-4c0be7f65031/: implementation_plan.md  task.md  walkthrough.md
markdown/plans/52ff3851-0057-4446-93ce-60352178590d/: implementation_plan.md  task.md  walkthrough.md
markdown/plans/6485f9e8-41f6-41a7-9d03-98b1d571180c/: implementation_plan.md  task.md  walkthrough.md
packaging/: build-appimage.sh
packaging/aur/: .SRCINFO  PKGBUILD
packaging/aur/appimagemanager-git/: PKGBUILD
po/: LINGUAS  Messages.sh  appimagemanager.pot
po/cs/: appimagemanager.po
po/de/: appimagemanager.po
po/es/: appimagemanager.po
po/fr/: appimagemanager.po
po/it/: appimagemanager.po
po/ja/: appimagemanager.po
po/nb/: appimagemanager.po
po/nl/: appimagemanager.po
po/pl/: appimagemanager.po
po/pt_BR/: appimagemanager.po
po/ru/: appimagemanager.po
po/sk/: appimagemanager.po
po/tr/: appimagemanager.po
po/uk/: appimagemanager.po
po/zh_CN/: appimagemanager.po
qml/: AboutDialog.qml  AboutPage.qml  ContributorsModel.qml  DashboardWindow.qml  LibraryPage.qml  ManageWindow.qml  OnboardingDialog.qml  SettingsDialog.qml  SettingsPage.qml  StorageDialog.qml  StorePage.qml  Theme.qml  UninstallDialog.qml  UninstallWindow.qml  UpdateDialog.qml
src/: CMakeLists.txt  main.cpp
src/core/: appimagecache.cpp  appimagecache.h  appimageinfo.h  appimagemanager.cpp  appimagemanager.h  appimagemanagersettings.kcfg  appimagemanagersettings.kcfgc  appimagereader.cpp  appimagereader.h  appsettings.cpp  appsettings.h  githubreleasechecker.cpp  githubreleasechecker.h  updatedaemon.cpp  updatedaemon.h
src/dbus/: appimagedbusadaptor.cpp  appimagedbusadaptor.h
src/gui/: amstoremodel.cpp  amstoremodel.h  appimagebackend.cpp  appimagebackend.h  appimageiconprovider.cpp  appimageiconprovider.h  appimageiconstore.cpp  appimageiconstore.h  appimagelistmodel.cpp  appimagelistmodel.h  appimagesortfiltermodel.cpp  appimagesortfiltermodel.h  appimageupdate.cpp  appimageupdate.h  appimagewindow.cpp  appimagewindow.h  corpsemodel.cpp  corpsemodel.h  dashboardwindow.cpp  dashboardwindow.h  downloadwatcher.cpp  downloadwatcher.h
src/plugin/: appimageactionplugin.cpp  appimageactionplugin.h  appimagemanager.json
tests/: CMakeLists.txt  tst_appimagecache.cpp  tst_appimagedbusadaptor.cpp  tst_appimageiconprovider.cpp  tst_appimageinfo.cpp  tst_appimagelistmodel.cpp  tst_appimagereader.cpp  tst_appsettings.cpp  tst_qml_main.cpp  tst_updatedaemon.cpp
tests/qml/: tst_dialogs.qml
(+89 files in other folders)
